turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:17: error: illegal start of simple expression
T(0)=[1,2,0,1,2,1]
     ^